// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine does not move the island when there is a bridge in the way (simulated RIGID keyword) 1`] = `
Array [
  Array [
    Array [
      "STATIONARY BgNW1",
    ],
    Array [
      "STATIONARY Island",
      "STATIONARY Player",
      "STATIONARY PlayerIsland",
    ],
  ],
  Array [
    Array [
      "STATIONARY Bridge",
    ],
    Array [
      "STATIONARY Island",
      "STATIONARY PlayerIsland",
    ],
  ],
]
`;

exports[`engine draws corner sprites correctly (according to mirror isles) 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Background",
      "STATIONARY RemoveLandRUD",
    ],
    Array [
      "STATIONARY Hole",
    ],
  ],
]
`;

exports[`engine draws corner sprites correctly (according to skipping stones) 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Sand",
      "STATIONARY RemoveLandRUD",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
]
`;

exports[`engine draws corner sprites correctly (according to skipping stones) 2`] = `
Array [
  Array [
    Array [
      "STATIONARY Sand",
      "STATIONARY RemoveLandRUD",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
]
`;

exports[`engine evaluates a no-op game 1`] = `
Array [
  Array [
    Array [],
    Array [
      "STATIONARY background",
      "STATIONARY Player",
    ],
  ],
]
`;

exports[`engine evaluates a simple game 1`] = `
Array [
  Array [
    Array [
      "STATIONARY one",
    ],
    Array [
      "STATIONARY Player",
    ],
  ],
]
`;

exports[`engine evaluates an empty game 1`] = `
Array [
  Array [
    Array [],
    Array [
      "STATIONARY background",
      "STATIONARY Player",
    ],
  ],
]
`;

exports[`engine keeps running the rule even when only the direction changed 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Green",
    ],
    Array [
      "STATIONARY Green",
    ],
    Array [
      "STATIONARY Green",
    ],
  ],
  Array [
    Array [
      "STATIONARY Background",
      "STATIONARY Red",
      "STATIONARY Blue",
    ],
    Array [
      "STATIONARY Background",
      "STATIONARY Red",
      "STATIONARY Blue",
    ],
    Array [
      "STATIONARY Background",
      "STATIONARY Red",
      "STATIONARY Blue",
    ],
  ],
]
`;

exports[`engine removes a sprite when it has NO in the action side (an OR tile) 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Player",
      "STATIONARY Hat",
    ],
  ],
]
`;

exports[`engine removes a sprite when it has NO in the action side 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Player",
      "STATIONARY Hat",
    ],
  ],
]
`;

exports[`engine removes the wantsToMove when specified in the rule 1`] = `
Array [
  Array [
    Array [],
    Array [
      "STATIONARY Background",
      "STATIONARY Player",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
]
`;
